--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,4 @@
 
-
 {% extends 'base.html' %}
 
 {% block content %}
@@ -36,6 +35,14 @@
     <a href="{% url 'main:create_product' %}">
         <button>
             Add New Product
+        </button>
+    </a>
+
+    <h5>Sesi terakhir login: {{ last_login }}</h5>
+
+    <a href="{% url 'main:logout' %}">
+        <button>
+            Logout
         </button>
     </a>
     
